--- a/log.ini
+++ b/log.ini
@@ -10,7 +10,8 @@ logFileName=test.log
 #滚动日志保存文件数量
 logRollingFileNums=2
 #日志滚动时间-logRollingMin:每分钟保存一个文件,logRollingHour:每小时保存一个文件,logRollingDay:每天保存一个文件
-logRollingMin = false
-logRollingHour = true
+logRollingMin = true
+logRollingHour = false
 logRollingDay = false
-
+#日志内存结点数最大值
+#logUnitCount = 2048
